js logic first gem working

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/javascript/game.js"></script>
 </head>
 
@@ -27,30 +28,28 @@
             </p>
         </div>
         <div class="content">
-            <p id="random">1</p>
+            <p id="random"></p>
             <p id="score">
-                Wins: <br><br>
-                Loses:
             </p>
         </div>
         <div id="crystals">
             <a href="#">
-                <img src="assets/images/obsidian.jpg" width=100px height=100px id="obsidian">
+                <img src="assets/images/obsidian.jpg" width=100px height=100px id="obsidian-cont">
             </a>
 
             <a href="#">
-                <img src="assets/images/ruby.jpg" width=100px height=100px id="ruby">
+                <img src="assets/images/ruby.jpg" width=100px height=100px id="ruby-cont">
             </a>
             <a href="#">
-                <img src="assets/images/jade.jpg" width=100px height=100px id="jade">
+                <img src="assets/images/jade.jpg" width=100px height=100px id="jade-cont">
             </a>
             <a href="#">
-                <img src="assets/images/diamond.jpg" width=100px height=100px id="diamond">
+                <img src="assets/images/diamond.jpg" width=100px height=100px id="diamond-cont">
             </a> 
         </div>
         <div id="guesscontent">
             <p id="yourguess">Your Guess is:</p>
-            <p id = "guess">20</p>
+            <p id = "guess"></p>
         </div>
     </div>
 
